appId: com.dk.piley
---
- tapOn: "No account? Click here to register"
- tapOn: "Email"
- inputText: "john@doe.com"
- pressKey: Enter
- inputText: "John Doe"
- pressKey: Enter
- inputText: "123456"
- pressKey: Enter
- tapOn:
    text: "Register"
    index: 1
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- tapOn: "Start Piling"
- assertVisible: "Daily"